Fix address alignment

--- a/wp-content/themes/glo/assets/less/sections/about.less
+++ b/wp-content/themes/glo/assets/less/sections/about.less
@@ -57,6 +57,8 @@
     .address-wrapper {
       display: flex;
       justify-content: center;
+      flex-flow: column;
+      align-items: center;
     }
     address {
       strong {
